src/test/deca/context/invalid/object/voidParam.deca
class X
{
  int a;
}
class A
{
  X a(void a, float b){}
}

class B extends A
{
  X a(int a, int c){}
}
